# rag_que

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
config/: logging.yaml  settings.yaml
docs/: ARCHITECTURE.md
proto/: memory.proto  que.proto  retrieval.proto
scripts/: compile_proto.py
sdk/: README.md  pyproject.toml
sdk/que_sdk/: __init__.py  client.py
src/: main.py
src/api/: __init__.py  kafka_consumer.py  rest_server.py
src/common/: config_loader.py  enums.py  exceptions.py  logger.py  result.py
src/communication/grpc_server/: que_service.py
src/engine/: __init__.py  backend_registry.py  builtin_backends.py  dag_executor.py  execution_router.py  intent_recognizer.py  models.py  pipeline.py  query_planner.py  query_rewriter.py  result_synthesizer.py  tenant.py
src/infrastructure/: telemetry.py
src/infrastructure/llm/: adapter.py  prompts.py
src/infrastructure/memory_client/: search_client.py
src/infrastructure/rag_client/: retrieval_client.py
src/infrastructure/redis/: __init__.py  client.py
tests/: test_e2e.py
